# gtamodel_tools

./: .gitignore  environment.yml  pyproject.toml  readme.md
example_configuration_files/: city_of_toronto_2025Network.yml  city_of_toronto_2025TTCsummaries_Network0.yml  city_of_toronto_2025TTCsummaries_Networks1-3.yml  city_of_toronto_base.yml  city_of_toronto_v4_0.yml
scripts/population_synthesis/metropop_v1/: create_base_year_personcontrols_from_census.ipynb
scripts/population_synthesis/preprocessing/: preprocess_census_profile.ipynb
scripts/summaries/: Produce Run Summary Table.ipynb  produce_summaries_forTTC.ipynb
scripts/tests/: Prepare Test Scenario.ipynb
scripts/validation/traffic_validation/: Prepare_Toronto_centreline_for_validation.ipynb  read_Toronto_midblock_counts.ipynb  read_and_trim_orn_network.ipynb
src/gtamodel_tools/: __init__.py  config.py  microsim.py
src/gtamodel_tools/common/: __init__.py  data.py  gis.py  orn.py  plotting.py  screenlines.py  spatial_aggregator.py  tcl.py  utilities.py
src/gtamodel_tools/enums/: __init__.py  age_categories.csv  common.py  microsim.py
src/gtamodel_tools/matrix/: matrix.py  read_emme_matrix.py
src/gtamodel_tools/microsim/: microsim.py  schema.py
src/gtamodel_tools/network/: __init__.py  network.py  read_emme_network.py
src/gtamodel_tools/summaries/: traffic_summaries.py  transit_summaries.py
src/tmg_tdm_tools/: __init__.py
tests/: conftest.py  test_spatial_aggregator.py  test_synthetic_population.py
tests/calibration/: test_synthetic_population_calibration.py
tests/common/: test_data.py  test_data_round_to_totals.py  test_gis.py  test_gis_areal_apportionment.py  test_spatial_aggregator.py
tests/network/: test_output_traffic_results_at_countposts.py  test_output_transit_results_at_countposts.py  test_read_network_from_nwp.py  test_summarize_link_attributes.py  test_summarize_traffic_across_screenlines.py  test_summarize_transit_across_screenlines.py  test_summarize_transit_segments.py  test_transit_line_profiles.py
tests/population_synthethis/: test_metropop_v1.py
tests/summaries/: test_traffic_summaries.py
tests/test_data/: auto_summary_config.yml  description.md  transit_summary_config.yml
(+86 files in other folders)
