[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0.0", "wheel"]

[project]
name = "tmg_tdm_tools"
version = "0.01"
description = "TMG Travel Model Post-Processing"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "License :: OSI Approved || MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

[tool.pytest.ini_options]
addopts = "-ra -q -s"
testpaths = [
    "tests"
]


