[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0.0"]

[project]
name = "gtamodel_tools"
version = "0.02"
authors = [
    {name="Bryce Sharman"}
]
description = "Python tools supporting TMG GTAModel."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "geopandas", 
    "matplotlib",  
    "numexpr",
    "numpy", 
    "openpyxl",
    "pandas", 
    "pyogrio",
    "pytest",
    "shapely",
    "yaml"]
classifiers = [
    "License :: OSI Approved || MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

[tool.pytest.ini_options]
addopts = "-ra -q -s"
testpaths = [
    "tests"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mypkg = ["*.csv"]

keywords = ["GTAModel", "TMG"]


